# quizz-me

./: .dockerignore  Makefile  Pipfile  pyproject.toml
app/: models.py  routes.py
docker/: Dockerfile  docker-compose-db.yml  docker-compose-full.yml  docker-compose.yml  entrypoint.sh
migrations/versions/: 273fd7f226d8_.py
quizz_me/: manage.py
quizz_me/quizz_me/: asgi.py  settings.py  urls.py
src/quizz_backend/: apps.py  models.py  views.py
src/quizz_backend/fixtures/: initial_data.json
src/quizz_backend/migrations/: 0001_initial.py
src/quizz_frontend/: apps.py  urls.py  views.py
src/quizz_frontend/views/: index.py  pupil.py
src/quizz_me/: settings.py  urls.py  wsgi.py
src/quizz_me/templates/pupil/: list.html
