[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quizz-me"
dynamic = ["version"]
dependencies = [
  "flask",
  "Flask-Migrate",
  "Flask-SQLAlchemy",
  "psycopg2-binary",
  "python-dotenv",
  "sqlalchemy",
  "Django",
]
requires-python = ">= 3.11"
authors = [
  {name = "Mikaël Hautin", email = "haha"},
]
maintainers = [
  {name = "Mikaël Hautin", email = "haha"},
]
description = "Generate quizz and follow-up alumni progress"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["quizz"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
testing = [
  "ruff"
]
